# pingpongmageddon

./: ChangeLog.md  Dockerfile  LICENSE  README.md  build-docker.sh  generate_brackets.hs  pingpongmageddon.cabal  run-docker.sh  stack.yaml
app/: Main.hs
src/: GraphViz.hs  GraphVizExport.hs  JsonExport.hs  SingleElimination.hs  TreeLabel.hs
